# unitreego2_navandvlm

./: .dockerignore  .gitignore  README.md
docker/: Dockerfile  docker-compose.yml
go2_control/: package.xml  setup.py
go2_control/go2_control/: keyboard_teleop.py
go2_navigation/: CMakeLists.txt  package.xml
go2_navigation/config/: nav2_params.yaml  robot.yaml
go2_navigation/launch/: bringup.launch.py  mapping.launch.py  navigation.launch.py
go2_navigation/map/: cty.pgm  cty.yaml  trua77.yaml
go2_robot_sdk/: package.xml  setup.py
go2_robot_sdk/go2_robot_sdk/application/services/: robot_data_service.py
go2_robot_sdk/go2_robot_sdk/infrastructure/ros2/: ros2_publisher.py
go2_robot_sdk/go2_robot_sdk/infrastructure/sensors/: lidar_decoder.py
go2_robot_sdk/go2_robot_sdk/infrastructure/webrtc/: go2_connection.py  webrtc_adapter.py
go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
navila/: navila_server.py  setup_navila_blackwell.sh
navila/scripts/: 1_robot.sh  2_navila.sh  3_web.sh  run.sh
navila/tools/: navila_demo.py  navila_eval.py  navila_verify.py
vlm/scripts/: run_qa_console.sh
vlm/webconsole/demo1/: agent_server.py  motion.py  navloop.py
vlm/webconsole/qa_console/: server.py
vlm/webconsole/tests/: test_demo1_navloop.py  test_frame_source.py  test_server.py  test_vlm_engine.py
