<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_robot_sdk</name>
  <version>0.0.0</version>
  <description>ROS2 unofficial sdk for Unitree Go2</description>
  <maintainer email="abizov94@gmail.com">brimo</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>go2_interfaces</depend>
  <!-- unitree_go merged into go2_interfaces -->
  <depend>sensor_msgs</depend>

  <!-- Driver runtime deps only. Launch/navigation/mapping deps moved to go2_navigation. -->
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
